--- a/lib/mux/Cargo.toml
+++ b/lib/mux/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Bryce Anderson <bryce.anderson22@gmail.com>"]
 
 [dependencies]
 byteorder = "0.4.2"
+bit-set = "0.3.0"
 
 [dependencies.sharedbuffer]
 path = "../sharedbuffer/"
-
